--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
             <iframe id="calendar-iframe" 
                     class="calendar-iframe"
-                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FSeoul&src=isalang.2ain%40gmail.com&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&mode=MONTH"
+                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&src=isalang.2ain%40gmail.com&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&mode=MONTH"
                     scrolling="no"
                     onload="hideLoading()">
             </iframe>
@@ -233,7 +233,7 @@
 
     <script>
         let currentView = 'month';
-        const baseCalendarUrl = 'https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FSeoul&src=isalang.2ain%40gmail.com&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0';
+        const baseCalendarUrl = 'https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&src=isalang.2ain%40gmail.com&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0';
 
         function switchView(view) {
             currentView = view;
