--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         .calendar-grid {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
-            gap: 1px;
-            background: #e9ecef;
+            gap: 0px;
+            background: #ffffff;
             width: 100%;
             table-layout: fixed;
         }
@@ -118,9 +118,9 @@
         .calendar-header-row {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
-            gap: 1px;
-            background: #e9ecef;
-            margin-bottom: 1px;
+            gap: 0px;
+            background: #ffffff;
+            margin-bottom: 0px;
             width: 100%;
         }
 
@@ -136,6 +136,11 @@
             min-width: calc(100% / 7);
             overflow: hidden;
             box-sizing: border-box;
+            border-right: 1px solid #e9ecef;
+        }
+
+        .day-header:last-child {
+            border-right: none;
         }
 
         .calendar-cell {
@@ -150,6 +155,12 @@
             min-width: calc(100% / 7);
             overflow: hidden;
             box-sizing: border-box;
+            border-right: 1px solid #e9ecef;
+            border-bottom: 1px solid #e9ecef;
+        }
+
+        .calendar-cell:nth-child(7n) {
+            border-right: none;
         }
 
         .date-number {
@@ -162,7 +173,7 @@
 
         .other-month {
             color: #adb5bd;
-            background: #f8f9fa;
+            background: #ffffff;
         }
 
         .today {
@@ -669,10 +680,13 @@
 
         function getDayEvents(date) {
             const dateStr = date.toDateString();
-            return events.filter(event => {
+            const dayEvents = events.filter(event => {
                 const eventDate = new Date(event.start.dateTime || event.start.date);
                 return eventDate.toDateString() === dateStr;
             }).slice(0, 3); // 最大3つまで表示
+            
+            console.log(`Events for ${dateStr}:`, dayEvents); // デバッグ
+            return dayEvents;
         }
 
         function createEventElement(event) {
