--- a/index.html
+++ b/index.html
@@ -1,395 +1,172 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Googleカレンダーウィジェット</title>
-<style>
-  :root {
-    --bg-grad-a:#e8f4f8;
-    --bg-grad-b:#f0f8e8;
-    --ink:#37352f;
-    --ink-sub:#495057;
-    --muted:#6b6866;
-    --chip:#42a5f5;
-  }
-  *{box-sizing:border-box; margin:0; padding:0}
-  body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,system-ui,sans-serif; background:#f8f9fa; color:var(--ink); line-height:1.5}
+# 📋 Googleカレンダーウィジェット - 仕様書
 
-  .calendar-container{
-    width:100%; max-width:none; min-height:100vh;
-    padding:20px; background:linear-gradient(135deg,var(--bg-grad-a),var(--bg-grad-b));
-    border-radius:20px; box-shadow:0 4px 20px rgba(0,0,0,.1)
-  }
-  .calendar-header{
-    display:flex; justify-content:space-between; align-items:center;
-    gap:12px; margin-bottom:16px; flex-wrap:wrap;
-  }
-  .calendar-nav{display:flex; align-items:center; gap:8px}
-  .nav-btn{
-    background:rgba(255,255,255,.9); border:0; border-radius:8px; padding:8px 12px;
-    font-weight:600; cursor:pointer; transition:.2s; backdrop-filter:blur(10px)
-  }
-  .nav-btn:hover{transform:translateY(-1px)}
-  .current-month{font-size:18px; font-weight:700}
+## 🎯 **概要**
+Google Calendar APIを使用したカスタムカレンダーウィジェット。Notion埋め込み用に最適化されており、スマホとPCで理想的な表示を実現。
 
-  .view-toggle{display:flex; gap:4px; background:rgba(255,255,255,.8); padding:4px; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,.08)}
-  .view-btn{border:0; background:transparent; padding:6px 14px; border-radius:8px; cursor:pointer; font-size:14px; color:#6b6866; font-weight:500}
-  .view-btn.active{background:linear-gradient(135deg,#a8e6cf,#88d8a3); color:#2d5016; font-weight:700; box-shadow:0 2px 6px rgba(0,0,0,.12)}
+## 🔧 **技術仕様**
 
-  .calendar-frame{
-    width:100%; background:rgba(255,255,255,.95); border:1px solid rgba(255,255,255,.6);
-    border-radius:16px; overflow:hidden; box-shadow:0 4px 16px rgba(0,0,0,.1)
-  }
+### **使用技術**
+- **言語**: HTML5, CSS3, JavaScript (ES6+)
+- **API**: Google Calendar API v3
+- **認証**: APIキー認証
+- **レスポンシブ**: CSS Grid + Flexbox
+- **デザイン**: グラスモーフィズム + グラデーション
 
-  .calendar-header-row{
-    display:grid; grid-template-columns:repeat(7,1fr); background:#fff
-  }
-  .day-header{
-    padding:12px 4px; text-align:center; font-weight:700; font-size:14px; color:var(--ink-sub); background:#f8f9fa
-  }
+### **APIキー設定**
+```javascript
+let apiKey = 'AIzaSyD7nOJVgpjuqu6-LjXDq7UNRBUGcCT3dDE';
+const calendarId = 'isalang.2ain@gmail.com';
+```
 
-  .calendar-grid{
-    display:grid; grid-template-columns:repeat(7,1fr); background:#fff;
-  }
-  .calendar-cell{
-    min-height:90px; padding:6px 6px 6px 6px; border-top:1px solid #f1f3f5; border-left:1px solid #f1f3f5;
-    display:flex; flex-direction:column; gap:4px; overflow:hidden;
-  }
-  .calendar-cell:nth-child(7n+1){border-left:0} /* 左端 */
-  .date-number{font-weight:700; font-size:12px; color:var(--ink-sub)}
-  .other-month .date-number{color:#adb5bd}
-  .today{background:#e3f2fd}
-  .today .date-number{
-    background:#2196f3; color:#fff; border-radius:999px; display:inline-flex;
-    align-items:center; justify-content:center; width:22px; height:22px; font-size:12px
-  }
+## 📱 **機能仕様**
 
-  .events-container{display:flex; flex-direction:column; gap:2px; overflow:hidden}
+### **表示モード**
+1. **月表示** (デフォルト)
+   - 7×6グリッドカレンダー
+   - 月曜始まり (`wkst=2`)
+   - 前月/次月の日付も表示
 
-  /* イベントは1行表示＋省略＆クリック可能 */
-  .event{
-    background:rgba(66,165,245,.75); color:#fff; border-radius:4px;
-    padding:2px 6px; display:flex; align-items:center; gap:6px;
-    overflow:hidden; cursor:pointer; user-select:none; transition:opacity .15s ease;
-  }
-  .event:hover{opacity:.85}
-  .event-time{font-weight:700; font-size:10px; white-space:nowrap; flex:0 0 auto}
-  .event-title{font-size:11px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; flex:1 1 auto}
+2. **週表示**
+   - 今週の7日間を縦並び
+   - 各日の予定をカード形式で表示
 
-  .loading,.error{display:flex; align-items:center; justify-content:center; height:320px; color:var(--muted); font-size:16px}
-  .error{flex-direction:column; gap:8px; color:#dc3545}
+3. **予定表示**
+   - 今月の全予定を時系列リスト
+   - 日付ヘッダー付き
 
-  /* Mobile */
-  @media (max-width:768px){
-    .calendar-container{padding:14px}
-    .view-btn{padding:4px 10px; font-size:13px}
-    .day-header{font-size:12px; padding:8px 2px}
-    .calendar-cell{min-height:70px; padding:4px}
-    .event-title{font-size:10px}
-  }
-</style>
-</head>
-<body>
-  <div class="calendar-container">
-    <div class="calendar-header">
-      <div class="calendar-nav">
-        <button class="nav-btn" id="prevBtn">‹</button>
-        <div class="current-month" id="current-month">--</div>
-        <button class="nav-btn" id="nextBtn">›</button>
-        <button class="nav-btn" id="todayBtn">今日</button>
-      </div>
-      <div class="view-toggle">
-        <button class="view-btn active" data-view="month">月</button>
-        <button class="view-btn" data-view="week">週</button>
-        <button class="view-btn" data-view="agenda">予定</button>
-      </div>
-    </div>
+### **ナビゲーション**
+- **前月/次月**: `‹` `›` ボタン
+- **今日**: 現在の月にジャンプ
+- **ビュー切替**: 月/週/予定ボタン
 
-    <div class="calendar-frame">
-      <div class="calendar-header-row" id="weekday-row">
-        <div class="day-header">月</div><div class="day-header">火</div><div class="day-header">水</div>
-        <div class="day-header">木</div><div class="day-header">金</div><div class="day-header">土</div><div class="day-header">日</div>
-      </div>
-      <div id="calendar-grid" class="calendar-grid"></div>
-      <div id="loading" class="loading" style="display:none">📅 読み込み中…</div>
-      <div id="error" class="error" style="display:none"></div>
-    </div>
-  </div>
+### **イベント表示**
+```javascript
+// 表示形式
+06:00
+朝活...
 
-<script>
-  // ======== 設定 ========
-  let apiKey   = 'YOUR_API_KEY_HERE';          // ←差し替え
-  const calendarId = 'isalang.2ain@gmail.com'; // 公開カレンダー or OAuthが必要
-  // ======================
+// タイトル処理
+- 改行含む → 最初の行のみ
+- 長いタイトル → PC:12文字、スマホ:8文字で「...」
+- ツールチップ → ホバー時に完全タイトル表示
+```
 
-  let currentView = 'month';
-  let currentDate = new Date();
-  let events = [];
+## 🎨 **デザイン仕様**
 
-  // --- Utils ---
-  const $ = sel => document.querySelector(sel);
-  function fmtMonth(d){
-    const m = ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月'];
-    return `${d.getFullYear()}年${m[d.getMonth()]}`;
-  }
-  function sameDay(a,b){return a.getFullYear()===b.getFullYear() && a.getMonth()===b.getMonth() && a.getDate()===b.getDate()}
+### **カラーパレット**
+```css
+/* 背景グラデーション */
+background: linear-gradient(135deg, #e8f4f8 0%, #f0f8e8 100%);
 
-  // Googleの終日は end.date が翌日（排他的）
-  function parseEventRange(ev){
-    let start = ev.start?.dateTime ? new Date(ev.start.dateTime) : new Date(ev.start.date + 'T00:00:00');
-    let end   = ev.end?.dateTime   ? new Date(ev.end.dateTime)   : new Date(ev.end.date   + 'T00:00:00');
-    if (ev.start?.date && ev.end?.date) { // 終日
-      end.setDate(end.getDate() - 1); // 包括に変換
-      end.setHours(23,59,59,999);
-    }
-    // 端数吸収
-    start.setMilliseconds(0);
-    return {start, end};
-  }
-  function eventOccursOn(date, ev){
-    const {start, end} = parseEventRange(ev);
-    const d0 = new Date(date); d0.setHours(0,0,0,0);
-    const d1 = new Date(date); d1.setHours(23,59,59,999);
-    return (start <= d1 && end >= d0);
-  }
+/* イベント色 */
+background: rgba(66, 165, 245, 0.7);
 
-  // --- Data fetch ---
-  async function loadCalendar(){
-    if (!apiKey) return;
-    $('#loading').style.display='flex';
-    $('#error').style.display='none';
+/* アクティブボタン */
+background: linear-gradient(135deg, #a8e6cf 0%, #88d8a3 100%);
+```
 
-    try{
-      const y = currentDate.getFullYear();
-      const m = currentDate.getMonth();
-      const first = new Date(y, m, 1);
-      const last  = new Date(y, m+1, 0);
+### **レスポンシブ設計**
+```css
+/* PC */
+.calendar-container { min-height: 100vh; }
+.calendar-cell { min-height: 90px; }
 
-      // 月曜始まりへ拡張
-      const calStart = new Date(first);
-      calStart.setDate(first.getDate() - ((first.getDay()+6)%7));
-      const calEnd = new Date(last);
-      calEnd.setDate(last.getDate() + ((7 - last.getDay())%7));
+/* タブレット (768px以下) */
+.calendar-cell { min-height: 80px; }
 
-      const url = new URL(`https://www.googleapis.com/calendar/v3/calendars/${encodeURIComponent(calendarId)}/events`);
-      url.searchParams.set('key', apiKey);
-      url.searchParams.set('timeMin', calStart.toISOString());
-      url.searchParams.set('timeMax', calEnd.toISOString());
-      url.searchParams.set('singleEvents', 'true');
-      url.searchParams.set('orderBy', 'startTime');
+/* スマホ (480px以下) */
+.calendar-cell { min-height: 60px; }
+```
 
-      const res = await fetch(url);
-      if (!res.ok) throw new Error(`API ${res.status}`);
-      const data = await res.json();
-      events = Array.isArray(data.items) ? data.items : [];
+## 📐 **レイアウト仕様**
 
-      $('#loading').style.display='none';
-      render();
-    }catch(e){
-      $('#loading').style.display='none';
-      const box = $('#error');
-      box.style.display='flex';
-      box.innerHTML = `<div>⚠️ 読み込み失敗</div><div style="font-size:14px;color:#6b6866">${e.message.includes('403')?'公開設定または認可が必要です（403）。':'APIキー/ID を確認してください。'}</div>`;
-      console.error(e);
-    }
-  }
+### **グリッドシステム**
+```css
+.calendar-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 0px; /* 境界線なし */
+}
 
-  // --- Renderers ---
-  function render(){
-    $('#current-month').textContent = fmtMonth(currentDate);
-    if (currentView==='month'){ renderMonth(); }
-    else if (currentView==='week'){ renderWeek(); }
-    else { renderAgenda(); }
-  }
+/* 完全7等分 */
+.calendar-cell {
+    max-width: calc(100% / 7);
+    min-width: calc(100% / 7);
+}
+```
 
-  function renderMonth(){
-    const grid = $('#calendar-grid');
-    grid.className = 'calendar-grid';
-    grid.style.display='grid';
-    grid.style.gridTemplateColumns='repeat(7,1fr)';
-    grid.innerHTML='';
+### **曜日幅統一**
+- **PC**: `calc(100% / 7)`
+- **スマホ**: `calc(100vw / 7 - 4px)`
 
-    const y = currentDate.getFullYear();
-    const m = currentDate.getMonth();
-    const first = new Date(y, m, 1);
-    const start = new Date(first);
-    start.setDate(first.getDate() - ((first.getDay()+6)%7));
+## 🔌 **API仕様**
 
-    const today = new Date();
+### **エンドポイント**
+```
+GET https://www.googleapis.com/calendar/v3/calendars/{calendarId}/events
+```
 
-    for(let i=0;i<42;i++){
-      const d = new Date(start); d.setDate(start.getDate()+i);
+### **パラメータ**
+```javascript
+const params = {
+    key: apiKey,
+    timeMin: calendarStart.toISOString(),
+    timeMax: calendarEnd.toISOString(),
+    singleEvents: true,
+    orderBy: 'startTime'
+};
+```
 
-      const cell = document.createElement('div');
-      cell.className = 'calendar-cell' + (d.getMonth()!==m?' other-month':'') + (sameDay(d,today)?' today':'');
+### **必要な権限**
+- Google Calendar API 読み取り権限
+- HTTPリファラー制限: `https://ame-chapchap.github.io/*`
 
-      const dn = document.createElement('div');
-      dn.className='date-number'; dn.textContent = d.getDate();
-      cell.appendChild(dn);
+## 📱 **スマホ最適化**
 
-      const wrap = document.createElement('div');
-      wrap.className='events-container';
-      cell.appendChild(wrap);
+### **タッチ対応**
+- ボタンサイズ: 最小44px (iOS推奨)
+- タップ領域確保
 
-      const list = events.filter(ev => eventOccursOn(d, ev)).slice(0, 3);
-      list.forEach(ev => wrap.appendChild(makeEventChip(ev)));
+### **文字サイズ調整**
+```css
+/* PC */
+.event { font-size: 10px; }
+.event-title { font-size: 9px; }
 
-      grid.appendChild(cell);
-    }
-  }
+/* スマホ */
+.event { font-size: 8px; }
+.event-title { font-size: 8px; }
+```
 
-  function renderWeek(){
-    const grid = $('#calendar-grid');
-    grid.style.display='block';
-    grid.style.gridTemplateColumns='none';
-    grid.innerHTML='';
+## 🔒 **セキュリティ仕様**
 
-    const base = new Date(currentDate);
-    const dow = (base.getDay()+6)%7; // 月=0
-    const weekStart = new Date(base); weekStart.setDate(base.getDate()-dow);
+### **APIキー制限**
+- **ドメイン制限**: GitHub Pages のみ
+- **API制限**: Google Calendar API のみ
+- **リファラー確認**: 自動適用
 
-    const box = document.createElement('div'); box.style.padding='20px';
+### **公開カレンダー設定**
+```
+予定のアクセス権限: 一般公開
+表示設定: すべての予定の詳細
+```
 
-    for(let i=0;i<7;i++){
-      const d = new Date(weekStart); d.setDate(weekStart.getDate()+i);
-      const day = document.createElement('div');
-      day.style.cssText = 'margin-bottom:16px;background:rgba(255,255,255,.95);border-radius:8px;padding:12px;box-shadow:0 1px 3px rgba(0,0,0,.08)';
+## 🚀 **デプロイ仕様**
 
-      const head = document.createElement('div');
-      head.style.cssText = 'font-weight:700;font-size:16px;margin-bottom:8px;color:#495057;border-bottom:1px solid #e9ecef;padding-bottom:8px';
-      head.textContent = `${d.getMonth()+1}/${d.getDate()} (${['日','月','火','水','木','金','土'][d.getDay()]})`;
-      day.appendChild(head);
+### **ホスティング**
+- **推奨**: GitHub Pages
+- **URL**: `https://ame-chapchap.github.io/iSalang-calender-widget/`
 
-      const list = events.filter(ev => eventOccursOn(d, ev));
-      if (list.length===0){
-        const none = document.createElement('div');
-        none.style.cssText='color:#adb5bd;font-style:italic'; none.textContent='予定なし';
-        day.appendChild(none);
-      }else{
-        list.forEach(ev=>{
-          const item = document.createElement('div');
-          item.style.cssText='padding:8px;margin:4px 0;background:rgba(66,165,245,.08);border-left:3px solid rgba(66,165,245,.7);border-radius:4px';
-          const start = ev.start?.dateTime ? new Date(ev.start.dateTime) : null;
-          const t = start ? start.toLocaleTimeString('ja-JP',{hour:'2-digit',minute:'2-digit'}) : '';
-          const title = (ev.summary||'予定').split('\n')[0];
+### **Notion埋め込み**
+```
+/embed → GitHubPagesのURL貼り付け
+```
 
-          item.innerHTML = `${t?`<div style="font-size:14px;font-weight:700;color:rgba(66,165,245,.9)">${t}</div>`:''}
-                            <div style="font-size:14px;color:#37352f;margin-top:2px">${title}</div>`;
-          item.style.cursor='pointer';
-          const link = ev.htmlLink;
-          if (link) item.onclick = ()=>window.open(link,'_blank','noopener');
-          day.appendChild(item);
-        });
-      }
-      box.appendChild(day);
-    }
-    grid.appendChild(box);
-  }
+## 🔄 **更新仕様**
 
-  function renderAgenda(){
-    const grid = $('#calendar-grid');
-    grid.style.display='block';
-    grid.style.gridTemplateColumns='none';
-    grid.innerHTML='';
+### **リアルタイム更新**
+- ページ読み込み時: 自動API呼び出し
+- 月変更時: 新しい期間のイベント取得
+- エラー時: 詳細エラーメッセージ表示
 
-    const m = currentDate.getMonth(), y = currentDate.getFullYear();
-    const list = events.filter(ev=>{
-      const s = ev.start?.dateTime ? new Date(ev.start.dateTime) : new Date(ev.start.date+'T00:00:00');
-      return s.getMonth()===m && s.getFullYear()===y;
-    }).sort((a,b)=>{
-      const A = new Date(a.start.dateTime || a.start.date);
-      const B = new Date(b.start.dateTime || b.start.date);
-      return A-B;
-    });
-
-    if (list.length===0){
-      const none = document.createElement('div');
-      none.style.cssText='padding:40px 20px;text-align:center;color:#6b6866';
-      none.textContent='この月には予定がありません';
-      grid.appendChild(none);
-      return;
-    }
-
-    const box = document.createElement('div'); box.style.padding='20px';
-    list.forEach(ev=>{
-      const eventDate = new Date(ev.start.dateTime || ev.start.date);
-      const wrap = document.createElement('div');
-      wrap.style.cssText='display:flex;align-items:center;padding:12px;margin-bottom:8px;background:rgba(255,255,255,.95);border-radius:8px;border-left:4px solid rgba(66,165,245,.7);box-shadow:0 1px 3px rgba(0,0,0,.08);cursor:pointer';
-
-      const dateEl = document.createElement('div');
-      dateEl.style.cssText='min-width:60px;text-align:center;margin-right:16px;color:#495057';
-      dateEl.innerHTML = `<div style="font-size:18px;font-weight:700">${eventDate.getDate()}</div>
-                          <div style="font-size:12px">${['日','月','火','水','木','金','土'][eventDate.getDay()]}</div>`;
-
-      const content = document.createElement('div'); content.style.flex='1';
-      const t = ev.start?.dateTime ? eventDate.toLocaleTimeString('ja-JP',{hour:'2-digit',minute:'2-digit'}) : '';
-      const title = (ev.summary||'予定').split('\n')[0];
-      content.innerHTML = `${t?`<div style="font-size:14px;font-weight:700;color:rgba(66,165,245,.9);margin-bottom:4px">${t}</div>`:''}
-                           <div style="font-size:16px;color:#37352f">${title}</div>`;
-
-      wrap.appendChild(dateEl); wrap.appendChild(content);
-      if (ev.htmlLink) wrap.onclick = ()=>window.open(ev.htmlLink,'_blank','noopener');
-      grid.appendChild(wrap);
-    });
-  }
-
-  function makeEventChip(ev){
-    const el = document.createElement('div');
-    el.className='event'; el.title = ev.summary || '予定';
-
-    let timeStr = '';
-    if (ev.start?.dateTime){
-      const dt = new Date(ev.start.dateTime);
-      timeStr = dt.toLocaleTimeString('ja-JP',{hour:'2-digit',minute:'2-digit'});
-    }
-
-    if (timeStr){
-      const t = document.createElement('div'); t.className='event-time'; t.textContent=timeStr; el.appendChild(t);
-    }
-    const titleEl = document.createElement('div');
-    titleEl.className='event-title';
-    titleEl.textContent = (ev.summary||'予定').split('\n')[0];
-    el.appendChild(titleEl);
-
-    if (ev.htmlLink){
-      el.addEventListener('click', (e)=>{ e.stopPropagation(); window.open(ev.htmlLink,'_blank','noopener'); });
-    }
-    return el;
-  }
-
-  // --- Handlers ---
-  function setView(view, btn){
-    currentView = view;
-    document.querySelectorAll('.view-btn').forEach(b=>b.classList.remove('active'));
-    if (btn) btn.classList.add('active');
-    render();
-  }
-
-  // init
-  window.addEventListener('load', ()=>{
-    $('#current-month').textContent = fmtMonth(currentDate);
-
-    // nav buttons
-    $('#prevBtn').onclick = ()=>{ 
-      if (currentView==='week'){ currentDate.setDate(currentDate.getDate()-7); }
-      else { currentDate.setMonth(currentDate.getMonth()-1); }
-      loadCalendar();
-    };
-    $('#nextBtn').onclick = ()=>{
-      if (currentView==='week'){ currentDate.setDate(currentDate.getDate()+7); }
-      else { currentDate.setMonth(currentDate.getMonth()+1); }
-      loadCalendar();
-    };
-    $('#todayBtn').onclick = ()=>{ currentDate = new Date(); loadCalendar(); };
-
-    // view toggle
-    document.querySelectorAll('.view-btn').forEach(btn=>{
-      btn.addEventListener('click', ()=> setView(btn.dataset.view, btn));
-    });
-
-    loadCalendar();
-  });
-</script>
-</body>
-</html>
+この仕様に基づいて、理想的な「06:00\n朝活」表示を実現するカレンダーウィジェットが完成しています！ 🎉
