--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.calendar-header<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #d6e9f0 0%, #f0e6d2 100%);
             min-height: 100vh;
             overflow-x: hidden;
             margin: 0;
@@ -24,10 +24,12 @@
             max-width: 900px;
             margin: 0 auto;
             padding: 0;
-            background: white;
+            background: rgba(255, 255, 255, 0.9);
             border-radius: 16px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .calendar-header {
@@ -36,17 +38,18 @@
             justify-content: space-between;
             margin-bottom: 0;
             padding: 30px 40px 20px 40px;
-            background: white;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
         }
 
         .nav-button {
-            background: #f8f9fa;
-            border: 1px solid #e9ecef;
+            background: rgba(214, 233, 240, 0.6);
+            border: 1px solid rgba(214, 233, 240, 0.8);
             border-radius: 8px;
             padding: 8px 12px;
             cursor: pointer;
             font-size: 18px;
-            color: #6c757d;
+            color: #5a7c89;
             transition: all 0.2s ease;
             min-height: 40px;
             min-width: 40px;
@@ -56,14 +59,14 @@
         }
 
         .nav-button:hover {
-            background: #e9ecef;
-            color: #495057;
+            background: rgba(214, 233, 240, 0.8);
+            color: #4a6c79;
         }
 
         .month-year {
             font-size: 24px;
             font-weight: 600;
-            color: #2c3e50;
+            color: #4a6c79;
             text-align: center;
             flex: 1;
             margin: 0 20px;
@@ -72,7 +75,7 @@
         .view-controls {
             display: flex;
             gap: 8px;
-            background: #f8f9fa;
+            background: rgba(214, 233, 240, 0.4);
             border-radius: 10px;
             padding: 4px;
         }
@@ -84,16 +87,16 @@
             padding: 8px 16px;
             cursor: pointer;
             font-size: 14px;
-            color: #6c757d;
+            color: #5a7c89;
             transition: all 0.2s ease;
             min-height: 36px;
             font-weight: 500;
         }
 
         .view-button.active {
-            background: white;
-            color: #495057;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            background: rgba(255, 255, 255, 0.9);
+            color: #4a6c79;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .calendar-grid {
@@ -214,8 +217,8 @@
         }
 
         .week-day {
-            background: white;
-            border: 1px solid #f1f3f4;
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(214, 233, 240, 0.6);
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 12px;
@@ -224,60 +227,64 @@
         .week-day-header {
             font-size: 18px;
             font-weight: 600;
-            color: #2c3e50;
+            color: #4a6c79;
             margin-bottom: 16px;
             padding-bottom: 12px;
-            border-bottom: 2px solid #f1f3f4;
+            border-bottom: 2px solid rgba(214, 233, 240, 0.6);
         }
 
         .agenda-event {
-            background: #bbdefb;
-            color: #1565c0;
+            background: linear-gradient(135deg, rgba(154, 205, 223, 0.7) 0%, rgba(174, 215, 228, 0.8) 100%);
+            color: #3a5a6b;
             padding: 16px;
             border-radius: 8px;
             margin-bottom: 12px;
             transition: all 0.2s ease;
             cursor: pointer;
-            border-left: 4px solid #1976d2;
+            border-left: 4px solid #6b9fc7;
+            backdrop-filter: blur(5px);
         }
 
         .agenda-event:hover {
-            background: #90caf9;
+            background: linear-gradient(135deg, rgba(154, 205, 223, 0.9) 0%, rgba(174, 215, 228, 1) 100%);
             transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(107, 159, 199, 0.3);
         }
 
         .agenda-date {
             font-size: 20px;
             font-weight: 600;
-            color: #2c3e50;
+            color: #4a6c79;
             margin: 24px 0 12px 0;
             padding-bottom: 8px;
-            border-bottom: 2px solid #f1f3f4;
+            border-bottom: 2px solid rgba(214, 233, 240, 0.6);
         }
 
         .error-message {
-            background: #ffebee;
-            color: #c62828;
+            background: rgba(240, 230, 210, 0.8);
+            color: #8b5a3c;
             padding: 20px;
             border-radius: 8px;
             text-align: left;
             margin: 20px;
-            border-left: 4px solid #f44336;
+            border-left: 4px solid #d4a574;
             line-height: 1.6;
+            backdrop-filter: blur(5px);
         }
 
         .setup-instructions {
-            background: #e3f2fd;
-            color: #1565c0;
+            background: rgba(214, 233, 240, 0.8);
+            color: #3a5a6b;
             padding: 20px;
             border-radius: 8px;
             margin: 20px;
-            border-left: 4px solid #2196f3;
+            border-left: 4px solid #6b9fc7;
+            backdrop-filter: blur(5px);
         }
 
         .setup-instructions h3 {
             margin-top: 0;
-            color: #1565c0;
+            color: #2a4a5b;
         }
 
         .setup-instructions ol {
@@ -290,7 +297,7 @@
         }
 
         .setup-instructions code {
-            background: rgba(25, 118, 210, 0.1);
+            background: rgba(107, 159, 199, 0.2);
             padding: 2px 6px;
             border-radius: 4px;
             font-family: 'Courier New', monospace;
@@ -300,7 +307,7 @@
             text-align: center;
             padding: 40px;
             font-size: 16px;
-            color: #6c757d;
+            color: #5a7c89;
         }
 
         /* ツールチップ */
@@ -364,7 +371,7 @@
             background: none;
             border: none;
             font-size: 24px;
-            color: #2c3e50;
+            color: #5a7c89;
             cursor: pointer;
             width: 30px;
             height: 30px;
@@ -376,8 +383,8 @@
         }
 
         .event-modal-close:hover {
-            background: rgba(231, 76, 60, 0.1);
-            color: #e74c3c;
+            background: rgba(212, 165, 116, 0.2);
+            color: #d4a574;
             transform: scale(1.1);
         }
 
@@ -435,17 +442,63 @@
             text-decoration: none;
             font-weight: 600;
             padding: 8px 16px;
-            background: linear-gradient(135deg, #3498db 0%, #2980b9 100%);
+            background: linear-gradient(135deg, #6b9fc7 0%, #5a8fb0 100%);
             border-radius: 25px;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             display: inline-block;
             margin: 4px 4px 4px 0;
-            box-shadow: 0 4px 15px rgba(52, 152, 219, 0.3);
+            box-shadow: 0 4px 15px rgba(107, 159, 199, 0.3);
             position: relative;
             overflow: hidden;
         }
 
         .event-detail-value a:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .event-detail-value a:hover {
+            transform: translateY(-2px) scale(1.02);
+            box-shadow: 0 6px 20px rgba(107, 159, 199, 0.4);
+            text-decoration: none;
+        }
+
+        .event-detail-value a:hover:before {
+            left: 100%;
+        }
+
+        .event-detail-value a[href*="zoom"] {
+            background: linear-gradient(135deg, #7bb3d9 0%, #6ba3c9 100%);
+            box-shadow: 0 4px 15px rgba(123, 179, 217, 0.3);
+        }
+
+        .event-detail-value a[href*="zoom"]:hover {
+            box-shadow: 0 6px 20px rgba(123, 179, 217, 0.4);
+        }
+
+        .event-detail-value a[href*="meet"] {
+            background: linear-gradient(135deg, #8dbdd6 0%, #7dacc5 100%);
+            box-shadow: 0 4px 15px rgba(141, 189, 214, 0.3);
+        }
+
+        .event-detail-value a[href*="meet"]:hover {
+            box-shadow: 0 6px 20px rgba(141, 189, 214, 0.4);
+        }
+
+        .event-detail-value a[href*="teams"] {
+            background: linear-gradient(135deg, #9ac5d6 0%, #8ab4c5 100%);
+            box-shadow: 0 4px 15px rgba(154, 197, 214, 0.3);
+        }
+
+        .event-detail-value a[href*="teams"]:hover {
+            box-shadow: 0 6px 20px rgba(154, 197, 214, 0.4);
+        }detail-value a:before {
             content: '';
             position: absolute;
             top: 0;
