--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="month-year" id="monthYear"></div>
         <div class="view-controls">
           <button class="view-button active" onclick="switchView('month')">月</button>
-          <button class="view-button" onclick="switchView('agenda')">予定</button>
+          <button class="view-button" onclick="switchView('agenda')">一覧</button>
         </div>
       </div>
       <button class="nav-button" onclick="nextMonth()">›</button>
