--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         }
 
         .event {
-            background: linear-gradient(135deg, rgba(120, 180, 150, 0.8) 0%, rgba(100, 160, 130, 0.85) 100%);
+            background: linear-gradient(135deg, #a4d2d8 0%, #8fc3c9 100%);
             color: white;
             font-size: 11px;
             font-weight: 500;
@@ -159,13 +159,13 @@
             transition: all 0.3s ease;
             backdrop-filter: blur(8px);
             border: 1px solid rgba(255, 255, 255, 0.4);
-            box-shadow: 0 3px 12px rgba(120, 180, 150, 0.25);
+            box-shadow: 0 3px 12px rgba(164, 210, 216, 0.25);
         }
 
         .event:hover {
-            background: linear-gradient(135deg, rgba(120, 180, 150, 0.95) 0%, rgba(100, 160, 130, 1) 100%);
+            background: linear-gradient(135deg, #a4d2d8 0%, #7ab3ba 100%);
             transform: translateY(-2px) scale(1.03);
-            box-shadow: 0 6px 20px rgba(120, 180, 150, 0.4);
+            box-shadow: 0 6px 20px rgba(164, 210, 216, 0.4);
         }
 
         .event-time {
