--- a/index.html
+++ b/index.html
@@ -715,12 +715,17 @@
             const startDate = getCalendarStartDate(currentDate);
             const endDate = getCalendarEndDate(currentDate);
 
+            console.log('API取得範囲:');
+            console.log('開始日:', startDate.toLocaleString());
+            console.log('終了日:', endDate.toLocaleString());
+
             events = await fetchEvents(startDate, endDate);
             
             // 月末近くのイベントをデバッグ
             if (events.length > 0) {
                 console.log('月末近くのイベントチェック:');
                 const monthEnd = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
+                console.log('月末日:', monthEnd.toLocaleDateString());
                 events.forEach(event => {
                     const eventDate = new Date(event.start.dateTime);
                     const eventDay = eventDate.getDate();
